# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

netmanager_cangjie_wrapper_packages_ohos = [
  "//foundation/communication/netmanager_cangjie_wrapper/ohos/net/http:ohos.net.http",
  "//foundation/communication/netmanager_cangjie_wrapper/ohos/net/connection:ohos.net.connection",
  "//foundation/communication/netmanager_cangjie_wrapper/ohos/net:ohos.net",
]
netmanager_cangjie_wrapper_packages_kit = [ "//foundation/communication/netmanager_cangjie_wrapper/kit/NetworkKit:kit.NetworkKit" ]
copy_ohos_cangjie_sdk_api_lib("copy_sdk_netmanager_cangjie_libs") {
  ohos_inputs = netmanager_cangjie_wrapper_packages_ohos
  kit_inputs = netmanager_cangjie_wrapper_packages_kit
}
